--- a/base-apparel-coming-soon/index.html
+++ b/base-apparel-coming-soon/index.html
@@ -3,22 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
   <main class="container">
-    <div class="content">
+    <section class="content">
       <div class="logo">
         <img src="./images/logo.svg" alt="Logo">
       </div>
@@ -26,29 +17,17 @@
       <p class="paragraph">Hello fellow shoppers! We're currently building our new fashion store. 
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
       <div class="search">
-        <input type="email" placeholder="Email Address">
-        <button>
-          <img src="./images/icon-arrow.svg" alt="">
+        <input class="search__input" type="email" placeholder="Email Address">
+        <button class="search__button">
+          <img src="./images/icon-arrow.svg" alt="Email">
         </button>
+        <span class="search__error-message">Please provide a valid email</span>
+        <span class="search__error-icon">
+          <img src="./images/icon-error.svg" alt="Error">
+        </span>
       </div>
-    </div>
-    <div class="picture"></div>
+    </section>
+    <section class="picture"></section>
   </main>
-
-  <!--
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-  -->
 </body>
 </html>
